# genc-kazanim-be

./: pyproject.toml
src/: helpers.py  main.py
